--- a/src/components/socialsbar/SocialsBar.module.css
+++ b/src/components/socialsbar/SocialsBar.module.css
@@ -1,10 +1,10 @@
 .socialsBar {
-  @apply z-[60] flex flex-col gap-6 items-center absolute left-4 px-4 py-5 sm:hidden;
-  top: 25vh;
+  @apply z-[60] flex flex-col justify-between items-center fixed bottom-0 left-0 px-4 py-5 sm:hidden;
+  min-height: 15%;
 }
 
 .socialsBar > a {
-  @apply text-blue-light;
+  @apply my-4 text-blue-light;
 }
 
 .socialsBarIcons {
